2015-01-26  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-get-new-news-this-group): Explicitly
	request rescans when being run interactively.

	* nnimap.el (nnimap-request-group): Don't rescan the group here,
	because that can be very slow in large groups.

	* gnus-int.el (gnus-request-group-scan): New backend function.

	* nnimap.el (nnimap-request-scan-group): Implement in on IMAP.

2015-01-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-suspend): Close all backends.

2015-01-19  Paul Eggert  <eggert@cs.ucla.edu>

	* dgnushack.el (dgnushack-compile-file): New function.
	(dgnushack-compile): Use it (bug#19514).

2015-01-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nntp.el (nntp-send-authinfo): Error out if the password is wrong.

2015-01-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* registry.el: Don't use <class> as a variable.

2014-12-29  Paul Eggert  <eggert@cs.ucla.edu>

	system-name's returned value can vary
	Also, the system-name variable is now obsolete.
	Fixes Bug#19438.
	* message.el (message-make-fqdn):
	* nnvirtual.el (nnvirtual-retrieve-headers)
	(nnvirtual-update-xref-header):
	Prefer (system-name) to system-name, and avoid naming
	locals 'system-name'.

2014-12-29  Lars Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-shr): Bind `shr-width' to `fill-column' so that
	lines don't get overlong when responding.

2014-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* registry.el (cl-remf, cl-loop, cl-subseq):
	Alias to remf, loop, and subseq respectively for old Emacsen.

2014-12-19  Andreas Schwab  <schwab@linux-m68k.org>

	* gnus-group.el (gnus-read-ephemeral-bug-group): Bind
	coding-system-for-read and coding-system-for-write only around
	with-temp-file, and make buffer unibyte.  Don't write temp file twice.

2014-12-18  Paul Eggert  <eggert@cs.ucla.edu>

	* registry.el (registry-db): Set default slot later.
	This is because its value is not a literal integer.
